# AiCustomerService

./: README.md
AI Customer Service/: openapi.json  pyproject.toml
AI Customer Service/app/: __init__.py  main.py
AI Customer Service/app/api/: dependencies.py
AI Customer Service/app/api/endpoints/: chat.py  orders.py  tickets.py  users.py
AI Customer Service/app/core/: config.py  exceptions.py  response.py
AI Customer Service/app/db/: create_tables.py  database.py  session.py
AI Customer Service/app/models/: __init__.py  conversation.py  order.py  ticket.py  user.py
AI Customer Service/app/schemas/: __init__.py  chat.py  message.py  order.py  session.py  ticket.py  user.py
AI Customer Service/app/services/: auth.py  conversation.py  order_service.py  ticket_service.py
AI Customer Service/app/services/agent/: graph.py  prompts.py  state.py  utils.py
AI Customer Service/app/services/agent/nodes/: __init__.py  emotion.py  faq.py  human_handoff.py  intent.py  router.py  tool_calls.py
AI Customer Service/app/services/mcp/: mcp_order_services.py  mcp_ticket_services.py
AI Customer Service/app/services/rag/: agentic_rag.py  chroma.sqlite3  data.txt  init_vectorstore.py
src/: App.vue
src/components/Chat/: ChatHistory.vue  ChatInput.vue  SessionList.vue
src/components/common/: Navbar.vue  Sidebar.vue
src/router/: index.ts
src/services/: api.ts  types.ts
src/stores/: auth.ts  chat.ts
src/utils/: axios.ts  storage.ts
src/views/: NotFound.vue
src/views/Auth/: Login.vue  Register.vue
src/views/Chat/: index.vue
src/views/Order/: index.vue
(+2 files in other folders)
